--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,29 @@
        	<artifactId>log4j</artifactId>
        	<version>1.2.17</version>
      </dependency>
+     
+            <dependency>
+       	<groupId>org.mongodb</groupId>
+       	<artifactId>mongo-java-driver</artifactId>
+       	<version>2.11.2</version>
+       </dependency>
+       
+       <dependency>
+ 			<groupId>org.jongo</groupId>
+    		<artifactId>jongo</artifactId>
+   			<version>0.4</version>
+  		</dependency>
+     
+  	<dependency>
+	<groupId>io.netty</groupId>
+	<artifactId>netty</artifactId>
+	<version>3.6.6.Final</version>
+	</dependency>
+	
+	<dependency>
+	<groupId>org.msgpack</groupId>
+	<artifactId>msgpack</artifactId>
+	<version>0.6.7</version>
+	</dependency>    
   </dependencies>
 </project>
