Implemented MongoDB connectivity and built a statistics monitoring worker.

--- a/strikd.properties
+++ b/strikd.properties
@@ -1,8 +1,12 @@
-# Instance configuration
+# Instance 
 instance.name=Bono
 
-# Path to locale directory (relative/absolute)
+# MongoDB cluster 
+db.server=localhost
+db.name=strik
+
+# Path to locale directory (either relative/absolute)
 locale.dir=locale
 
-# Network configuration
+# Network 
 net.port=22381
