--- a/pom.xml
+++ b/pom.xml
@@ -1,40 +1,47 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>nl.indev.strik</groupId>
-  <artifactId>strikd</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>strikd</name>
-  <description>Gameserver for the iOS game 'Strik'.</description>
-  
-  <dependencies>
-  	<dependency>
-       	<groupId>log4j</groupId>
-       	<artifactId>log4j</artifactId>
-       	<version>1.2.17</version>
-     </dependency>
-     
-            <dependency>
-       	<groupId>org.mongodb</groupId>
-       	<artifactId>mongo-java-driver</artifactId>
-       	<version>2.11.2</version>
-       </dependency>
-       
-       <dependency>
- 			<groupId>org.jongo</groupId>
-    		<artifactId>jongo</artifactId>
-   			<version>0.4</version>
-  		</dependency>
-     
-  	<dependency>
-	<groupId>io.netty</groupId>
-	<artifactId>netty</artifactId>
-	<version>3.6.6.Final</version>
-	</dependency>
-	
-	<dependency>
-	<groupId>org.msgpack</groupId>
-	<artifactId>msgpack</artifactId>
-	<version>0.6.7</version>
-	</dependency>    
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>nl.indev.strik</groupId>
+	<artifactId>strikd</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>strikd</name>
+	<description>Gameserver for the iOS game 'Strik'.</description>
+
+	<dependencies>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.11.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jongo</groupId>
+			<artifactId>jongo</artifactId>
+			<version>0.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty</artifactId>
+			<version>3.6.6.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.msgpack</groupId>
+			<artifactId>msgpack</artifactId>
+			<version>0.6.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections-maven</artifactId>
+			<version>0.9.9-RC1</version>
+		</dependency>
+	</dependencies>
 </project>
