--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,12 @@
 			<artifactId>msgpack</artifactId>
 			<version>0.6.7</version>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>org.reflections</groupId>
-			<artifactId>reflections-maven</artifactId>
-			<version>0.9.9-RC1</version>
-		</dependency>
+	<groupId>org.reflections</groupId>
+	<artifactId>reflections</artifactId>
+	<version>0.9.9-RC1</version>
+</dependency>
+            
 	</dependencies>
 </project>
