Changed gitignore to work with intellij. Changed pom for that too! :)

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,38 @@
 	<name>strikd</name>
 	<description>Gameserver for the iOS game 'Strik'.</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <archive>
+                                <manifest>
+                                    <mainClass>strikd.Bootstrapper</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src-core</directory>
+            </resource>
+        </resources>
+    </build>
+
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
