--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,11 @@
 			<artifactId>reflections</artifactId>
 			<version>0.9.9-RC1</version>
 		</dependency>
+		
+		   <dependency>
+        <groupId>org.springframework.social</groupId>
+        <artifactId>spring-social-facebook</artifactId>
+        <version>1.0.3.RELEASE</version>
+    </dependency>
 	</dependencies>
 </project>
