Flushing out a ton of WIP-code (still stable & unchanged protocol though!)

--- a/strikd.properties
+++ b/strikd.properties
@@ -1,6 +1,12 @@
 # Instance 
 instance.name=Bono
 
+# Cluster entry
+server.id=3
+server.name=Bono
+server.host=0:0:0:0
+server.port=22381
+
 # MongoDB cluster 
 db.server=localhost
 db.name=strik
