Fixed stuff related to server hosts in the cluster

--- a/strikd.properties
+++ b/strikd.properties
@@ -4,7 +4,7 @@ instance.name=Bono
 # Cluster entry
 server.id=3
 server.name=Bono
-server.host=0:0:0:0
+server.host=serv-bono.strik.it
 server.port=22381
 
 # MongoDB cluster 
