Facebook OpenGraph stories with the new FacebookPublisher (using latest Spring Social Framework M4)

--- a/strikd.properties
+++ b/strikd.properties
@@ -11,5 +11,7 @@ db.name=strik
 # Path to locale directory (either relative/absolute)
 locale.dir=locale
 
-# Facebook reward system
-facebook.page.id=1337
+# Facebook settings for rewards + OG stories
+facebook.page.id=201106016721764
+facebook.app.ns=strik-fb
+faceobok.app.secret=28925581e6b913aa5f9d4cbe147f2321
