--- a/pom.xml
+++ b/pom.xml
@@ -70,10 +70,23 @@
 			<version>0.9.9-RC1</version>
 		</dependency>
 		
-		   <dependency>
+    <dependency>
         <groupId>org.springframework.social</groupId>
         <artifactId>spring-social-facebook</artifactId>
-        <version>1.0.3.RELEASE</version>
+        <version>1.1.0.M4</version>
     </dependency>
 	</dependencies>
+	
+	    
+<repositories>
+
+    <repository>
+        <id>spring-milestones</id>
+        <name>Spring Milestones</name>
+        <url>http://repo.spring.io/milestone</url>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+    </repository>
+</repositories>
 </project>
