Revamped the FB publishing code to support the access_token for restricting to server-only publications

--- a/strikd.properties
+++ b/strikd.properties
@@ -11,7 +11,7 @@ db.name=strik
 # Path to locale directory (either relative/absolute)
 locale.dir=locale
 
-# Facebook settings for rewards + OG stories
-facebook.page.id=201106016721764
+# Facebook settings for OG stories + rewards
 facebook.app.ns=strik-fb
-faceobok.app.secret=28925581e6b913aa5f9d4cbe147f2321
+facebook.app.token=675897809090251|fVanEPmTc1tc3EuYAjzSdiX96ow
+facebook.page.id=201106016721764
