--- a/strikd.properties
+++ b/strikd.properties
@@ -3,6 +3,7 @@ server.id=3
 server.name=Bono
 server.host=serv-bono.strik.it
 server.port=13381
+cluster.sync.interval=5
 
 # MongoDB cluster 
 db.server=localhost
