--- a/src-core/log4j.properties
+++ b/src-core/log4j.properties
@@ -14,3 +14,6 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss:SSS} %-5p %c{1} - %m%n
+
+# Silence MessageHandlers debug stuff
+log4j.logger.strikd.communication.incoming.MessageHandlers=INFO
