--- a/src-core/log4j.properties
+++ b/src-core/log4j.properties
@@ -13,4 +13,7 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss:SSS} %-5p %c
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss:SSS} %-5p %c{1} - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss:SSS} %-5p [%t] %c{1} - %m%n
+
+# Silence Spring Framework debug
+log4j.logger.org.springframework=INFO
