--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,12 @@
 			<version>0.4</version>
 		</dependency>
 
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty</artifactId>
-			<version>3.6.6.Final</version>
-		</dependency>
+<dependency>
+	<groupId>io.netty</groupId>
+	<artifactId>netty-all</artifactId>
+	<version>4.0.12.Final</version>
+</dependency>
+            
 
 		<dependency>
 			<groupId>org.reflections</groupId>
