--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>strikd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>strikd</name>
-	<description>Gameserver for the iOS game 'Strik'.</description>
+	<description>Game server for the smartphone game 'Strik'.</description>
 
     <build>
         <plugins>
@@ -82,6 +82,69 @@
     <artifactId>kryo</artifactId>
     <version>2.22</version>
 </dependency>
+
+
+<dependency>
+	<groupId>xalan</groupId>
+	<artifactId>xalan</artifactId>
+	<version>2.7.1</version>
+</dependency>
+            
+            
+         <dependency>
+            <groupId>org.jboss.spec</groupId>
+            <artifactId>jboss-javaee-6.0</artifactId>
+            <version>3.0.1.Final</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         
+         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.1.6.Final</version>
+         </dependency>
+         
+             <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>4.2.0.Final</version>
+        <scope>compile</scope>
+        <exclusions> 
+            <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
+    <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>1.0.0.GA</version>
+        <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator-annotation-processor</artifactId>
+        <version>4.3.1.Final</version>
+        <scope>compile</scope>
+    </dependency>
+         
+         <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.27</version>
+</dependency>
+
+<dependency>
+	<groupId>org.slf4j</groupId>
+	<artifactId>slf4j-api</artifactId>
+	<version>1.7.5</version>
+</dependency>
+            
+            
+            
 	</dependencies>
 	
 	    
@@ -104,5 +167,6 @@
     <name>Maven Central Repository</name>
     <url>http://repo1.maven.org/maven2</url>
 </repository>
+   
 </repositories>
 </project>
