Ebean ORM for RDBMS such as PostgreSQL or MySQL (goodbye MongoDB!) and SLF4J (impl=Log4J) for more logging flexibility!

--- a/strikd.properties
+++ b/strikd.properties
@@ -5,9 +5,11 @@ server.host=serv-bono.strik.it
 server.port=13381
 cluster.sync.interval=5
 
-# MongoDB cluster 
-db.server=localhost
-db.name=strik
+# Database
+db.user=root
+db.password=root
+db.url=jdbc:mysql://localhost:3306/strik
+db.driver=com.mysql.jdbc.Driver
 
 # Path to locale directory (either relative/absolute)
 locale.dir=locale
