--- a/pom.xml
+++ b/pom.xml
@@ -7,144 +7,53 @@
 	<name>strikd</name>
 	<description>Game server for the smartphone game 'Strik'.</description>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>attached</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <configuration>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                            <archive>
-                                <manifest>
-                                    <mainClass>strikd.Bootstrapper</mainClass>
-                                </manifest>
-                            </archive>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <resources>
-            <resource>
-                <directory>src-core</directory>
-            </resource>
-        </resources>
-    </build>
-
 	<dependencies>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>2.11.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jongo</groupId>
-			<artifactId>jongo</artifactId>
-			<version>0.4</version>
-		</dependency>
-
-<dependency>
-	<groupId>io.netty</groupId>
-	<artifactId>netty-all</artifactId>
-	<version>4.0.12.Final</version>
+	<dependency>
+	<groupId>org.slf4j</groupId>
+	<artifactId>slf4j-api</artifactId>
+	<version>1.7.5</version>
 </dependency>
             
+            <dependency>
+	<groupId>org.slf4j</groupId>
+	<artifactId>slf4j-log4j12</artifactId>
+	<version>1.7.5</version>
+</dependency>
+            
+        
+
+		
+		<dependency>
+		<groupId>org.avaje.ebeanorm</groupId>  
+  <artifactId>avaje-ebeanorm</artifactId>  
+  <version>3.2.4</version>  
+</dependency>
+            
+            <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.27</version>
+</dependency>
+            
+            
+
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.12.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
 			<version>0.9.9-RC1</version>
 		</dependency>
-		
-    <dependency>
-        <groupId>org.springframework.social</groupId>
-        <artifactId>spring-social-facebook</artifactId>
-        <version>1.1.0.M4</version>
-    </dependency>
 
-<dependency>
-    <groupId>com.esotericsoftware.kryo</groupId>
-    <artifactId>kryo</artifactId>
-    <version>2.22</version>
-</dependency>
-
-
-<dependency>
-	<groupId>xalan</groupId>
-	<artifactId>xalan</artifactId>
-	<version>2.7.1</version>
-</dependency>
-            
-            
-         <dependency>
-            <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-6.0</artifactId>
-            <version>3.0.1.Final</version>
-            <type>pom</type>
-            <scope>import</scope>
-         </dependency>
-         
-         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.1.6.Final</version>
-         </dependency>
-         
-             <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-validator</artifactId>
-        <version>4.2.0.Final</version>
-        <scope>compile</scope>
-        <exclusions> 
-            <exclusion>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-            </exclusion>
-        </exclusions>
-    </dependency>
-    <dependency>
-        <groupId>javax.validation</groupId>
-        <artifactId>validation-api</artifactId>
-        <version>1.0.0.GA</version>
-        <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-validator-annotation-processor</artifactId>
-        <version>4.3.1.Final</version>
-        <scope>compile</scope>
-    </dependency>
-         
-         <dependency>
-	<groupId>mysql</groupId>
-	<artifactId>mysql-connector-java</artifactId>
-	<version>5.1.27</version>
-</dependency>
-
-<dependency>
-	<groupId>org.slf4j</groupId>
-	<artifactId>slf4j-api</artifactId>
-	<version>1.7.5</version>
-</dependency>
-            
-            
-            
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-facebook</artifactId>
+			<version>1.1.0.M4</version>
+		</dependency>
 	</dependencies>
 	
 	    
@@ -169,4 +78,30 @@
 </repository>
    
 </repositories>
+
+
+<!--<build>
+    <plugins>
+      <plugin>
+        <groupId>org.avaje.ebeanorm</groupId>
+        <artifactId>avaje-ebeanorm-mavenenhancer</artifactId>
+        <version>3.2.1</version>
+        <executions>
+          <execution>
+            <id>main</id>
+            <phase>process-classes</phase>
+            <configuration>
+              <classSource>target/classes</classSource>
+              <packages>strikd.**</packages>
+              <transformArgs>debug=9</transformArgs>
+            </configuration>
+            <goals>
+              <goal>enhance</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>-->
+  
 </project>
