--- a/src-core/log4j.properties
+++ b/src-core/log4j.properties
@@ -15,5 +15,6 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss:SSS} %-5p [%t] %c{1} - %m%n
 
-# Silence Spring Framework debug
+# Silence some framework DEBUG
 log4j.logger.org.springframework=INFO
+log4j.logger.org.hibernate=INFO
