Added PostgreSQL vendor libraries so strikd supports PostgreSQL out of the box

--- a/strikd.properties
+++ b/strikd.properties
@@ -8,8 +8,10 @@ cluster.sync.interval=5
 # Database
 db.user=root
 db.password=root
-db.url=jdbc:mysql://localhost:3306/strik
+db.url=jdbc:mysql://localhost/strik
 db.driver=com.mysql.jdbc.Driver
+#db.url=jdbc:postgresql://localhost/strik
+#db.driver=org.postgresql.Driver
 
 # Path to locale directory (either relative/absolute)
 locale.dir=locale
