--- a/pom.xml
+++ b/pom.xml
@@ -57,15 +57,6 @@
 			<version>3.2.2</version>
 		</dependency>
 
-
-
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.27</version>
-		</dependency>
-
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
@@ -83,6 +74,22 @@
 	<artifactId>restfb</artifactId>
 	<version>1.6.12</version>
 </dependency>
+
+
+
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.27</version>
+		</dependency>
+		
+		<dependency>
+	<groupId>postgresql</groupId>
+	<artifactId>postgresql</artifactId>
+	<version>9.1-901.jdbc4</version>
+</dependency>
+           
             
 	</dependencies>
 
