Added connection pool tuning parameters to strikd.properties

--- a/strikd.properties
+++ b/strikd.properties
@@ -12,6 +12,8 @@ db.url=jdbc:mysql://localhost/strik
 db.driver=com.mysql.jdbc.Driver
 #db.url=jdbc:postgresql://localhost/strik
 #db.driver=org.postgresql.Driver
+db.pool.min=3
+db.pool.max=10
 
 # Path to locale directory (either relative/absolute)
 locale.dir=locale
