--- a/src-core/log4j.properties
+++ b/src-core/log4j.properties
@@ -17,3 +17,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss:SSS} %-5p [%t] %c{1} 
 
 # Silence some framework DEBUG
 log4j.logger.io.netty=INFO
+log4j.logger.com.avaje=INFO
