Disabled ebean transaction logging etc

--- a/src-core/log4j.properties
+++ b/src-core/log4j.properties
@@ -17,4 +17,8 @@ log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss:SSS} %-5p [%t] %c{1} 
 
 # Silence some framework DEBUG
 log4j.logger.io.netty=INFO
-log4j.logger.com.avaje=INFO
+
+# Configure Ebean logging (stfu!)
+log4j.logger.org.avaje.ebean.SUM=OFF
+log4j.logger.org.avaje.ebean.TXN=OFF
+log4j.logger.org.avaje.ebean.SUM=OFF
