Ebean logging: only log warnings

--- a/src-core/log4j.properties
+++ b/src-core/log4j.properties
@@ -19,6 +19,6 @@ log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss:SSS} %-5p [%t] %c{1} 
 log4j.logger.io.netty=INFO
 
 # Configure Ebean logging (stfu!)
-log4j.logger.org.avaje.ebean.SUM=OFF
-log4j.logger.org.avaje.ebean.TXN=OFF
-log4j.logger.org.avaje.ebean.SUM=OFF
+log4j.logger.org.avaje.ebean.SUM=WARN
+log4j.logger.org.avaje.ebean.TXN=WARN
+log4j.logger.org.avaje.ebean.SUM=WARN
