Facebook stuff (friendlist etc), OPCODES and 'debug.db.reset=1' option in strikd.properties

--- a/strikd.properties
+++ b/strikd.properties
@@ -22,3 +22,6 @@ locale.dir=locale
 facebook.app.ns=strik-fb
 facebook.app.token=675897809090251|fVanEPmTc1tc3EuYAjzSdiX96ow
 facebook.page.id=201106016721764
+
+# Development and debug
+dev.db.reset=1
