Silenced Ebean DEBUG

--- a/src-core/log4j.properties
+++ b/src-core/log4j.properties
@@ -15,10 +15,11 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss:SSS} %-5p [%t] %c{1} - %m%n
 
-# Silence some framework DEBUG
+# Silence Netty DEBUG
 log4j.logger.io.netty=INFO
 
-# Configure Ebean logging (stfu!)
+# Configure Ebean logging
+log4j.logger.com.avaje=INFO
 log4j.logger.org.avaje.ebean.SUM=WARN
 log4j.logger.org.avaje.ebean.TXN=WARN
 log4j.logger.org.avaje.ebean.SQL=TRACE
