--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src-core"/>
-	<classpathentry excluding="strikd/game/match/bots/ai/IndexedWordSearch.java|strikd/game/board/impl/AwesomeBoard.java|strikd/game/board/WildCardTile.java|strikd/game/board/BoardWord.java|strikd/game/board/impl/HanzeBoard.java" kind="src" path="src-game"/>
+	<classpathentry excluding="strikd/game/match/bots/ai/IndexedWordSearch.java|strikd/game/board/impl/AwesomeBoard.java|strikd/game/board/WildCardTile.java|strikd/game/board/BoardWord.java|strikd/game/board/impl/HanzeBoard.java|strikd/game/items/ItemTypeEnum.java" kind="src" path="src-game"/>
+	<classpathentry kind="src" path="src-game-items"/>
 	<classpathentry kind="src" path="src-communication"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
