--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
 	<version>20131018</version>
 </dependency>
 
+<dependency>
+	<groupId>joda-time</groupId>
+	<artifactId>joda-time</artifactId>
+	<version>2.3</version>
+</dependency>
+            
+
 		<!-- Vendor stuff for DB -->
 		<dependency>
 			<groupId>mysql</groupId>
