--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 	<artifactId>strikd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>strikd</name>
-	<description>Game server for the smartphone game 'Strik'.</description>
+	<description>Standalone Java server software for the smartphone game 'Strik'.</description>
 
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
   		<maven.compiler.target>1.7</maven.compiler.target>
   		
-		<ebeanorm.version>3.2.4</ebeanorm.version>
+		<ebeanorm.version>3.3.1-RC2</ebeanorm.version>
 		<ebeanorm-mavenenhancer.version>3.2.2</ebeanorm-mavenenhancer.version>
 		<skipTests>true</skipTests>
 	</properties>
